[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "unitree-interface"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
# license = { file = "LICENSE" }

dependencies = ["unitree-sdk2py"]

[tool.uv.sources]
unitree-sdk2py = { git = "https://github.com/Kaweees/unitree_sdk2_python.git", branch = "main" }

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ipykernel>=6.29.5"]
